--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -186,3 +186,11 @@ body {
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
+
+.Blink {
+  animation: blinker 1.5s cubic-bezier(.5, 0, 1, 1) infinite alternate;  
+}
+@keyframes blinker {  
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
