--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,14 @@
     <div id="controls">
     <a href=# id=recordButton><button onclick="pressStart()">Record</button></a>
      <button id="stopButton" onclick="pressStop()">Stop</button>
-     <a href=# id=processButton><button onclick="location.href='http://127.0.0.1:5000/process';">Process</button></a>
+
+     <!-- <form action="/stop" method='POST'>
+      <button name="stopButton" onclick="pressStop()" type="submit">Stop</button>
+    </form> -->
+     <form action="/process" method='POST'>
+      <button name="processButton" type="submit">Process</button>
+    </form>
+     <!-- <a href=# id=processButton><button onclick="location.href='http://127.0.0.1:5000/process';">Process</button></a> -->
     </div>
     <br>
     <div> <h4 id="instructions">Click start to start recording.</h4></div>
@@ -44,7 +51,7 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-
+<!-- 
 <script type=text/javascript>
   $(function() {
     $('a#processButton').bind('click', function() {
@@ -55,6 +62,6 @@
       return false;
     });
   });
-</script>
+</script> -->
 
 </script>
