--- a/templates/result.html
+++ b/templates/result.html
@@ -82,21 +82,8 @@
 
     <!-- inserting these scripts at the end to be able to use all the elements in the DOM -->
   	<script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
-  	<script src="js/app.js"></script>
+  	<script src="static/js/app.js"></script>
     
   </body>
 </html>
-
-<script type=text/javascript>
-        $(function() {
-          $('a#processButton').bind('click', function() {
-            $.getJSON('/process',
-                function(data) {
-                    window.location.replace("http://127.0.0.1:5000/process");
-            });
-            return false;
-          });
-        });
-</script>
-
 </script>
